--- a/resources/assets/sass/_responsiveGallery.scss
+++ b/resources/assets/sass/_responsiveGallery.scss
@@ -2,10 +2,40 @@
 .responsiveGallery{
 	margin-top: 20px;
 	
+	
+	
 	@media screen and (min-width: 300px) {
-		.bricklayer-column-sizer {
-			flex-basis: 300px;
+		&[data-column-width="150"]{
+			.bricklayer-column-sizer {
+				flex-basis: 150px;
+			}
 		}
+		&[data-column-width="200"]{
+			.bricklayer-column-sizer {
+				flex-basis: 200px;
+			}
+		}
+		&[data-column-width="250"]{
+			.bricklayer-column-sizer {
+				flex-basis: 250px;
+			}
+		}
+		&[data-column-width="300"]{
+			.bricklayer-column-sizer {
+				flex-basis: 300px;
+			}
+		}
+		&[data-column-width="350"]{
+			.bricklayer-column-sizer {
+				flex-basis: 350px;
+			}
+		}
+		&[data-column-width="400"]{
+			.bricklayer-column-sizer {
+				flex-basis: 400px;
+			}
+		}
+		
 	}
 
 	.box{
@@ -16,5 +46,21 @@
 	}
 	.bricklayer-column{
 		padding: 0 5px;
+		
+		.gutter-1{
+			
+		}
+		.gutter-2{
+			
+		}
+		.gutter-3{
+			
+		}
+		.gutter-4{
+			
+		}
+		.gutter-5{
+			
+		}
 	}
 }
